--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 			<div class="inner1">
 				<h3>Contact Us</h3>
 			</div>
-			<form action="https://formspree.io/{{ site.email }}" method="POST">
+			<form action="{{ site.formspree }}" method="POST">
 				<div class="field half first">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
